alterado cor efeito hover botao

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     --cinza-secundario: #c0c0c0;
     --botao-azul:#167BF7;
     --cor-de-fundo:#00030C;
-    --botao-azul-efeito: #3c92fa;
+    --botao-azul-efeito: #fa3cbe;
 
     --fonte-principal: 'Inter', sans-serif;
 }
